--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,6 +67,5 @@
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["src/**/*"],
-  "exclude": ["**/*.spec.ts", "**/*.spec.tsx"]
+  "include": ["src/**/*"]
 }
