fix: added index.d.ts to npm package

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Run tests
         run: yarn test
 
+      - name: Build barrels
+        run: yarn barrels
+
       - name: Compile sources
         run: yarn build
 
