--- a/examples/expo/.gitignore
+++ b/examples/expo/.gitignore
@@ -1,5 +1,6 @@
-node_modules/**/*
-.expo/*
+.expo/
+node_modules/
+web-build/
 npm-debug.*
 *.jks
 *.p8
@@ -7,7 +8,6 @@ npm-debug.*
 *.key
 *.mobileprovision
 *.orig.*
-web-build/
 
 # macOS
 .DS_Store
