feat: added ability to resolve a custom font face to a native font name
Closes #1

--- a/example/app.json
+++ b/example/app.json
@@ -2,6 +2,23 @@
   "expo": {
     "name": "RNFontFaces",
     "slug": "react-native-font-faces",
-    "version": "0.0.0"
+    "version": "0.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": ["**/*"],
+    "ios": {
+      "supportsTablet": true
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
+    }
   }
 }
