--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
+    "react-helmet": "^6.1.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-web": "~0.11.7"
   },
@@ -20,7 +21,11 @@
     "@babel/core": "^7.8.6",
     "@expo/webpack-config": "^0.12.20",
     "@types/react": "~16.9.41",
+    "@types/react-helmet": "^6.0.0",
     "@types/react-native": "~0.62.13",
+    "@use-expo/font": "^2.0.0",
+    "expo-font": "^8.2.1",
+    "react-refresh": "^0.8.3",
     "typescript": "~3.9.5"
   },
   "private": true
