--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "jest",
     "build": "bob build",
-    "prepublishOnly": "yarn build"
+    "release": "semantic-release"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
@@ -37,6 +37,7 @@
     "metro-react-native-babel-preset": "^0.60.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
+    "semantic-release": "^17.1.1",
     "typescript": "^3.9.6"
   },
   "husky": {
