--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "ts-dedent": "^1.1.1"
   },
   "peerDependencies": {
-    "react": "^16.11.0",
-    "react-native": "~0.60.0"
+    "react": ">=16.9.0",
+    "react-native": ">=0.60.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
