fix: added a prepack script for improved use with CDNs
fixes #126

- add prepack script and exclude src
- fix paths
- add src back

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "test": "jest",
     "build": "bob build",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "prepack": "yarn build"
   },
   "dependencies": {
     "redent": "^3.0.0",
