fix: update package.json

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "react-native-font-faces",
   "main": "dist/commonjs/index.js",
   "module": "dist/module/index.js",
-  "author": "Kyler Jensen <kjens93@users.noreply.github.com>",
+  "author": "Kyler Jensen <kylerjensen-b23c19@opayq.com>",
   "typings": "dist/typescript/index.d.ts",
   "license": "MIT",
   "version": "0.0.0",
   "react-native": "src/index.ts",
-  "repository": "https://github.com/Kjens93/react-native-font-faces.git",
+  "repository": "https://github.com/kylerjensen/react-native-font-faces.git",
   "description": "Easily emulate @font-face behavior in react-native",
   "files": [
     "src",
